修复一部分错误，增加可修改的内容

--- a/Languages/中文/Menu.txt
+++ b/Languages/中文/Menu.txt
@@ -8,9 +8,9 @@ cmdSetColor=设置全局字体颜色
 FraMenuAlpha=菜单透明度
 lblMenuAlpha=菜单透明度:
 FraAeroAdjust=Aero调整
-lblShadowColor=阴影颜色 B:
-lblShadowColor=阴影颜色 G:
-lblShadowColor=阴影颜色 R:
+lblShadowColor(0)=阴影颜色 B:
+lblShadowColor(1)=阴影颜色 G:
+lblShadowColor(2)=阴影颜色 R:
 lblShadowDarkness=阴影暗度:
 lblShadowSharpness=阴影锐度:
 lblShadowSize=阴影大小:
@@ -24,15 +24,15 @@ Label5=共有207个服务
 pcNewTask=新建任务
 pcSearchModules=搜索模块
 Label3=共有50个进程
-lLabels=Shadow SSDT
-lLabels=SSDT
-lLabels=鼠标锁
-lLabels=设置
-lLabels=驱动
-lLabels=注册表
-lLabels=服务
-lLabels=进程
-lLabels=窗口
+lLabels(8)=Shadow SSDT
+lLabels(7)=SSDT
+lLabels(6)=鼠标锁
+lLabels(5)=设置
+lLabels(4)=驱动
+lLabels(3)=注册表
+lLabels(2)=服务
+lLabels(1)=进程
+lLabels(0)=窗口
 Check1=总在最上
 Check3=跟随鼠标
 Check2=显示全部窗口
@@ -128,7 +128,6 @@ pTerminateProcessByDebugProcess=ZwDebugActiveProcess
 pWinStationTerminateProcess=WinStationTerminateProcess
 p08=-
 pColumnS=显示列
-pColumnSelect=进程名
 pRestart=使用相同命令行重启
 pReleaseAll=释放句柄
 sMenu=服务菜单
@@ -175,17 +174,3 @@ dDump=转储
 sSSDT=SSDT菜单
 sRecover=恢复
 sRecoverAll=恢复全部
-pColumnSelect=进程ID
-pColumnSelect=父进程ID
-pColumnSelect=PEB
-pColumnSelect=EPROCESS
-pColumnSelect=优先级
-pColumnSelect=内存使用
-pColumnSelect=IO读取次数
-pColumnSelect=IO写入次数
-pColumnSelect=IO其他次数
-pColumnSelect=IO读取字节
-pColumnSelect=IO写入字节
-pColumnSelect=IO其他字节
-pColumnSelect=映像路径
-pColumnSelect=命令行
