--- a/Languages/中文/ProcessStart.txt
+++ b/Languages/中文/ProcessStart.txt
@@ -1,15 +1,15 @@
 ProcessStart=    
 fSInfo=启动参数
 Frame7=显示模式
-optShow=不激活
-optShow=不激活+最小化
-optShow=最小化
-optShow=原尺寸显示
-optShow=不激活+显示
-optShow=不激活+最大化
-optShow=激活+最小化
-optShow=激活+显示
-optShow=隐藏
+optShow(8)=不激活
+optShow(7)=不激活+最小化
+optShow(6)=最小化
+optShow(5)=原尺寸显示
+optShow(4)=不激活+显示
+optShow(3)=不激活+最大化
+optShow(2)=激活+最小化
+optShow(1)=激活+显示
+optShow(0)=隐藏
 Frame6=结果
 Label5=LastErr
 m_TID=TID
