--- a/Languages/中文/Default.txt
+++ b/Languages/中文/Default.txt
@@ -9,3 +9,15 @@ Main.EnumProcess=枚举进程...
 Main.EnumService=枚举服务...
 Main.EnumDrivers=枚举驱动...
 Main.Starting=正在启动...
+EXCEPTION_ACCESS_VIOLATION=访问违规
+EXCEPTION_ARRAY_BOUNDS_EXCEEDED=数组出界
+Exception=异常 
+ProcessTerminated=进程已经终止，退出代码：
+Edit1=修改 
+Value1= 值
+Edit.FailValue=修改值失败！
+Edit.Error=注册表未知错误！错误号：
+Disasm.Address=地址
+Disasm.HexData=HEX数据
+Disasm=反汇编
+Disasm.Notes=注释
