修复英文版翻译错误

--- a/Languages/English/Menu.txt
+++ b/Languages/English/Menu.txt
@@ -37,9 +37,9 @@ Check1=Always on top
 Check3=Follow mouse
 Check2=Show all windows
 Label1=active windows in sum
-mainMenu=functions
+mainMenu=Functions
 mainSetting=Setup
-mainReadme=Explanation
+mainReadme=About
 FatherMenus=Parent window menu
 nCNNew=Refresh List
 nNewMenu=Refresh List
